# paddle-ocr-rs

./: Cargo.toml
src/: base_net.rs  crnn_net.rs
