[package]
name = "paddle-ocr-rs"
version = "0.6.1"
edition = "2024"
readme = "README.md"
keywords = ["paddle", "ocr", "onnx"]
license = "Apache-2.0"
description = "Use Rust to call Paddle OCR models via ONNX Runtime for image text recognition."
repository = "https://github.com/mg-chao/paddle-ocr-rs"
authors = ["mg-chao <chao@mgchao.top>"]

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
imageproc = "0.25.0"
ndarray = "0.17.1"
ort = { git = "https://github.com/pykeio/ort", branch = "main", default-features = false, features = ["ndarray"] }
geo-types = "0.7.18"
geo-clipper = "0.9.0"
clipper-sys = "0.8.0"
thiserror = "2.0.17"
image = "0.25.9"

[features]
default = ["download-binaries", "copy-dylibs", "ort/default"]
download-binaries = ["ort/download-binaries"]
copy-dylibs = ["ort/copy-dylibs"]
